Add 2nd fieldset

--- a/exercises/html-e-css-forms-flexbox-e-responsivo_1/index.html
+++ b/exercises/html-e-css-forms-flexbox-e-responsivo_1/index.html
@@ -26,6 +26,30 @@
           <option value="mg">Minas Gerais</option>
         </select>
       </fieldset>
+      <fieldset>
+        <label for="summary">CV Summary</label>
+        <textarea
+          name="summary"
+          id="summary"
+          cols="30"
+          rows="10"
+          maxlength="1000"
+        ></textarea>
+        <label for="position">Position</label>
+        <input type="text" name="position" id="position" maxlength="40" />
+        <label for="position-description">Position Description</label>
+        <input type="text" name="" id="position-description" maxlength="500" />
+        <label for="date">Start Date</label>
+        <input
+          type="date"
+          name="begin"
+          placeholder="dd-mm-yyyy"
+          value=""
+          min="1997-01-01"
+          max="2030-12-31"
+          required
+        />
+      </fieldset>
     </form>
   </body>
 </html>
